# kms-integrations

./: .bazelrc  .gitattributes  .gitignore  BUILD  BUILD.bazel  BUILDING.md  CHANGELOG.md  CommitMessageBestPractices.md  NOTICE  README.md  TROUBLESHOOTING.md  WORKSPACE  boringssl.bzl  go.bzl  go.mod  go.sum
common/: BUILD.bazel  backoff.cc  backoff.h  backoff_test.cc  file_log_sink.cc  file_log_sink.h  file_log_sink_test.cc  kms_client.cc  kms_client.h  kms_client_service_config.h  kms_client_test.cc  kms_v1.h  openssl.cc  openssl.h  pagination_range.h  pagination_range_test.cc  platform.h  platform_posix.cc  platform_test.cc  platform_win.cc  source_location.h  source_location_test.cc  status_details.proto  status_macros.h  status_macros_test.cc  status_utils.h  string_utils.cc  string_utils.h  string_utils_test.cc  test_message.proto
common/test/: BUILD.bazel  matchers.h  matchers_test.cc  proto_parser.h  proto_parser_test.cc  resource_helpers.cc  resource_helpers.h  runfiles.cc  runfiles.h  test_platform.h  test_platform_posix.cc  test_platform_win.cc  test_status_macros.h  test_status_macros_test.cc
fakekms/: BUILD  BUILD.bazel  asymmetric_rpcs.go  crypto_key_rpcs.go  crypto_key_version_rpcs.go  errors.go  fakekms.go  generate_random.go  interceptor.go  key_factory.go  key_ring_rpcs.go  kms_enums.go  proto_allowlist.go  proto_allowlist_test.go  resource_names.go  symmetric_rpcs.go
fakekms/contract/: BUILD  BUILD.bazel  asymmetric_decrypt_test.go  asymmetric_sign_test.go  contract_test.go  contract_test_client.go  create_crypto_key_test.go  create_crypto_key_version_test.go  create_key_ring_test.go  destroy_crypto_key_version_test.go  generate_random_test.go  get_crypto_key_test.go  get_crypto_key_version_test.go  get_key_ring_test.go  get_public_key_test.go  list_crypto_key_versions_test.go  list_crypto_keys_test.go  list_key_rings_test.go  mac_test.go  raw_encrypt_decrypt_test.go  update_crypto_key_test.go  update_crypto_key_version_test.go  util.go  util_test.go
fakekms/cpp/: BUILD  BUILD.bazel  fakekms.h  fakekms_posix.cc  fakekms_test.cc  fakekms_win.cc  fault_helpers.cc  fault_helpers.h
fakekms/fault/: BUILD  BUILD.bazel  fault.go  fault.proto  fault_test.go  math.proto
fakekms/java/: BUILD.bazel  FakeKms.java  FakeKmsTest.java
fakekms/main/: BUILD.bazel  main.go
fakekms/testdata/: rsa_4096_private.pem
kmscng/: BUILD.bazel  Set-KmsCertKeyLink.ps1  algorithm_details.cc  algorithm_details.h  algorithm_details_test.cc  cng_headers.h  cpdk.bzl  object.cc  object.h  object_loader.cc  object_loader.h  object_loader_test.cc  object_test.cc  provider.cc  provider.h  provider_test.cc  version.h  wix.bzl
kmscng/config/: BUILD.bazel  config.cc  config.h  config.proto  config_test.cc  protoyaml.cc  protoyaml.h  protoyaml_test.cc  protoyaml_test.proto
kmscng/docs/: user_guide.md
kmscng/main/: BUILD.bazel  bridge.cc  bridge.h  bridge_test.cc  install_actions.cc  install_actions.def  install_test.go  install_testlib.go  kmscng.def  kmscng.wxs  kmscng_upgrade_test.wxs  main.cc  register_provider.cc  unsupported.cc
kmscng/operation/: BUILD.bazel  sign_utils.cc  sign_utils.h  sign_utils_test.cc
kmscng/test/: BUILD.bazel  matchers.h  matchers_test.cc  register_provider.cc  register_provider.h  registered_provider_test.cc  signtool_test.go  test_message.proto
kmscng/test/e2e/: BUILD.bazel  (+1 more)
kmscng/util/: BUILD.bazel  errors.cc  errors.h  errors_test.cc  logging.cc  logging.h  logging_test.cc  registration.cc  registration.h  status_utils.cc  status_utils.h  status_utils_test.cc  string_utils.cc  string_utils.h  string_utils_test.cc
kmsp11/config/: BUILD  BUILD.bazel  config.cc  config.h  config.proto  config_test.cc  protoyaml.cc  protoyaml.h  protoyaml_test.cc  protoyaml_test.proto
kmsp11/main/: BUILD  BUILD.bazel  asymmetric_crypt_test.cc  asymmetric_sign_test.cc  binary_test.go  bridge.cc  bridge.h.template  bridge_logging_test.cc  bridge_test.cc  fips_test_fips_mode.cc  fips_test_nonfips_mode.cc  fork_support.h  fork_support_posix.cc  fork_support_win.cc  fork_test.cc  function_def_builder.go  function_def_scanner.go  function_def_scanner_test.go  function_def_template.bzl  function_list.h.template  linux_exports.lds.template  macos_exports.lds.template  main.cc.template  symmetric_crypt_test.cc  unsupported.cc  win_exports.def.template
kmsp11/operation/: BUILD  BUILD.bazel  aes_cbc.cc  aes_cbc.h  aes_cbc_test.cc  aes_ctr.cc  aes_ctr.h  aes_ctr_test.cc  aes_gcm.cc  aes_gcm.h  aes_gcm_test.cc  crypter_interfaces.h  crypter_ops.cc  crypter_ops.h  crypter_ops_test.cc  ecdsa.cc  ecdsa.h  ecdsa_test.cc  find.h  hmac.cc  hmac.h  hmac_test.cc  kms_digest_signer.cc  kms_digest_signer.h  kms_digesting_signer.cc  kms_digesting_signer.h  kms_digesting_signer_test.cc  kms_digesting_verifier.cc  kms_digesting_verifier.h  kms_digesting_verifier_test.cc  kms_prehashed_signer.cc  kms_prehashed_signer.h  kms_signer.cc  kms_signer.h  operation.h  preconditions.cc  preconditions.h  preconditions_test.cc  rsaes_oaep.cc  rsaes_oaep.h  (+10 more)
kmsp11/sample/: BUILD.bazel  sample.c  sample_test.cc
kmsp11/test/: BUILD  BUILD.bazel  common_setup.cc  common_setup.h  matchers.h  matchers_test.cc  proto_parser.h  proto_parser_test.cc  resource_helpers.cc  resource_helpers.h  runfiles.cc  runfiles.h  test_message.proto  test_platform.h  test_platform_posix.cc  test_platform_win.cc  test_status_macros.h  test_status_macros_test.cc
kmsp11/util/: BUILD  BUILD.bazel  backoff.cc  backoff.h  backoff_test.cc  checksums.cc  checksums.h  checksums_test.cc  cleanup.h  cleanup_test.cc  crypto_utils.cc  crypto_utils.h  crypto_utils_test.cc  errors.cc  errors.h  errors_test.cc  global_provider.cc  global_provider.h  global_provider_test.cc  handle_map.h  handle_map_test.cc  kms_client.cc  kms_client.h  kms_client_service_config.h  kms_client_test.cc  kms_v1.h  logging.cc  logging.h  logging_test.cc  padding.cc  padding.h  padding_test.cc  pagination_range.h  pagination_range_test.cc  platform.h  platform_posix.cc  platform_test.cc  platform_win.cc  source_location.h  source_location_test.cc  (+11 more)
(+172 files in other folders)
