load("@bazel_skylib//lib:selects.bzl", "selects")

package_group(
    name = "internal",
    packages = ["//..."],
)

config_setting(
    name = "freebsd",
    constraint_values = ["@platforms//os:freebsd"],
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "macos",
    constraint_values = ["@platforms//os:macos"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

selects.config_setting_group(
    name = "posix",
    match_any = [
        ":freebsd",
        ":linux",
        ":macos",
    ],
)

config_setting(
    name = "fips",
    values = {"define": "fips=1"},
)

config_setting(
    name = "openssl",
    values = {"define": "openssl=1"},
)

# A target to encompass tests that are tagged 'manual'
# but should be run in CI environments.
test_suite(
    name = "ci_only_tests",
    tags = ["manual"],
    tests = [
        "//kmsp11/main:binary_test",
        "//kmsp11/test/e2e:e2e_test",
    ],
)

# A target to encompass tests that are tagged 'manual'
# but should be run in Windows CI environments.
#
# We should be able to merge this with :ci_only tests in Bazel 7
# using the new flag --skip_incompatible_explicit_targets.
# https://github.com/bazelbuild/bazel/issues/17403
test_suite(
    name = "windows_ci_only_tests",
    tags = ["manual"],
    tests = [
        "//kmscng/main:install_test",
    ],
)
