load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fakekms",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    embedsrcs = glob(["testdata/*"]),
    importpath = "cloud.google.com/kms/integrations/fakekms",
    visibility = ["//visibility:public"],
    deps = [
        "//fakekms/fault",
        "//fakekms/fault:fault_go_proto",
        "@com_google_cloud_go_kms//apiv1/kmspb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//types/known/durationpb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_google_protobuf//types/known/wrapperspb:go_default_library",
    ],
)

go_test(
    name = "fakekms_test",
    size = "small",
    srcs = glob(["*_test.go"]),
    embed = [":fakekms"],
    deps = [
        "@com_google_cloud_go_kms//apiv1/kmspb:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//types/known/durationpb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_google_protobuf//types/known/wrapperspb:go_default_library",
    ],
)
