load("@bazel_skylib//lib:selects.bzl", "selects")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = [
    "//common:__subpackages__",
    "//kmscng:__subpackages__",
])

cc_library(
    name = "bridge",
    srcs = [
        "bridge.cc",
        "unsupported.cc",
    ],
    hdrs = ["bridge.h"],
    linkstatic = True,
    target_compatible_with = ["@platforms//os:windows"],
    deps = [
        "//common:status_macros",
        "//kmscng:cng_headers",
        "//kmscng:object",
        "//kmscng:provider",
        "//kmscng/util:errors",
        "//kmscng/util:logging",
        "//kmscng/util:status_utils",
        "//kmscng/util:string_utils",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
    alwayslink = True,
)

cc_test(
    name = "bridge_test",
    size = "small",
    srcs = ["bridge_test.cc"],
    linkopts = ["-DEFAULTLIB:ncrypt.lib"],
    target_compatible_with = ["@platforms//os:windows"],
    deps = [
        ":bridge",
        "//common:kms_v1",
        "//common/test:resource_helpers",
        "//common/test:test_status_macros",
        "//kmscng:cng_headers",
        "//kmscng/test:matchers",
        "//kmsp11/util:crypto_utils",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "kmscng.dll",
    linkshared = True,
    target_compatible_with = ["@platforms//os:windows"],
    win_def_file = "kmscng.def",
    deps = [":main"],
)

cc_library(
    name = "main",
    srcs = ["main.cc"],
    target_compatible_with = ["@platforms//os:windows"],
    deps = [
        ":bridge",
        "//kmscng:cng_headers",
        "//kmscng/util:logging",
        "//kmscng/util:status_utils",
        "@com_google_absl//absl/status",
    ],
)

# This genrule creates a copy of the DLL named "libkmscng.dll" just to have a
# value to use for the outs field, and then copies kmscng.dll to system32.
# Robocopy only copies the DLL if it's newer than the version in system32, or
# if it's the first time copying it.
genrule(
    name = "move_dll_to_system32",
    srcs = [
        ":kmscng.dll",
    ],
    outs = ["libkmscng.dll"],
    cmd_bat = "copy $(@D)\\kmscng.dll $(@D)\\libkmscng.dll > NUL && robocopy $(@D) C:\\Windows\\System32 kmscng.dll /xc /xo > NUL & exit /b 0",
)
